welcome.lessons.welcome.conditions.Conditions.scala.code
if estfacemur(){
	recule()
}else{
	avance()
}
